2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.

2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* README: Include build instructions.

2012-07-19         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Improve test for PostgreSQL connectivity.

2012-07-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Add --with-libpq-conninfo option to help test
	pgsql extension.  Set automake conditional TEST_PGSQL based on
	whether we are able to connect to a PostgreSQL database server.
	Use AS_HELP_STRING to improve formatting of the help message.
	Bump the version.

2012-07-17         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.
	* gawklib.h (gawk_api_varinit_constant): Declare new function.
	(gawk_varinit_constant): New macro.
	* varinit.c (gawk_api_varinit_constant): New function.

2012-07-13         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* configure.ac: Bump version.

2012-07-12         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.h (gawk_api_varinit_scalar, gawk_api_varinit_array): New
	helper functions for initializing variables.  To do this, we need
	to include gawkapi.h.
	* strhash.c: Since gawklib.h now includes gawkapi.h, we must include
	it after various system header files.  Also, must undef emalloc
	from gawkapi.h.
	* varinit.c: New file to implement gawk_api_varinit_scalar and
	gawk_api_varinit_array.
	* Makefile.am (libgawklib_la_SOURCES): Add varinit.c.
	* configure.ac (AC_INIT): Bump version.

2012-07-11         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* gawklib.h: Remove dl_load_func_stub, since gawkapi.h dl_load_func
	now has support for an initialization function.
	Stop including config.h or unistd.h, since this goes in /usr/include.