@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([Gawk Libraries], 0.1.9, xmlgawk-users@lists.sourceforge.net, gawklib)
+AC_INIT([Gawk Libraries], 0.2.0, xmlgawk-users@lists.sourceforge.net, gawklib)
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([build-aux])
