@@ -17,6 +17,7 @@ libraries.
 %package -n %{name}-devel
 Summary:	Header files and libraries for gawklib development
 Requires:	%{name} = %{version}-%{release}
+Requires:	gawk-devel
 
 %description -n %{name}-devel
 The %{name}-devel package contains the header files and libraries
@@ -66,7 +67,7 @@ for accessing the MPFR library.  Please compare this to using gawk's -M
 option to perform all calculations using MPFR.
 
 %prep
-%setup -q -n %{name}-%{version}-%{releasename}
+%setup -q
 
 %build
 %configure
@@ -127,6 +128,9 @@ fi
 %{_libdir}/gawk/mpfr.so
 
 %changelog
-* Thu Jul 19 2012 Andrew Schorr <aschorr@telemetry-investments.com> - 1.0.0-1
+* Sat Jul 21 2012 Andrew Schorr <aschorr@telemetry-investments.com> - 0.2.0-1
+- This version has been tested and should work.
+
+* Thu Jul 19 2012 Andrew Schorr <aschorr@telemetry-investments.com> - 0.1.9-1
 - Initial packaging.  This has not been tested and almost certainly contains
   errors.
