@@ -1,3 +1,7 @@
+2012-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* *.po: Update for new release.
+
 2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* *.po: Update for new release.
