@@ -1,3 +1,7 @@
+2012-07-21         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* configure.ac: Bump version.
+
 2012-07-20         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
 	* configure.ac: Bump version.
